--- a/hola/pom.xml
+++ b/hola/pom.xml
@@ -1,24 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-	Copyright 2018, Red Hat, Inc. and/or its affiliates, and individual
-	contributors by the @authors tag. See the copyright.txt in the
-	distribution for a full listing of individual contributors.
-
-	Licensed under the Apache License, Version 2.0 (the "License");
-	you may not use this file except in compliance with the License.
-	You may obtain a copy of the License at
-	http://www.apache.org/licenses/LICENSE-2.0
-	Unless required by applicable law or agreed to in writing, software
-	distributed under the License is distributed on an "AS IS" BASIS,
-	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-	See the License for the specific language governing permissions and
-	limitations under the License.
--->
+<!-- Copyright 2018, Red Hat, Inc. and/or its affiliates, and individual 
+	contributors by the @authors tag. See the copyright.txt in the distribution 
+	for a full listing of individual contributors. Licensed under the Apache 
+	License, Version 2.0 (the "License"); you may not use this file except in 
+	compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
+	Unless required by applicable law or agreed to in writing, software distributed 
+	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
+	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
+	the specific language governing permissions and limitations under the License. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-  <parent>
+	<parent>
 		<groupId>com.redhat.training.msa</groupId>
 		<artifactId>msa-parent</artifactId>
 		<version>1.0</version>
@@ -32,32 +26,23 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.wildfly.swarm</groupId>
-			<artifactId>jaxrs</artifactId>
+			<artifactId>microprofile-health</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.wildfly.swarm</groupId>
-			<artifactId>jaxrs-jsonp</artifactId>
+			<artifactId>microprofile-metrics</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.wildfly.swarm</groupId>
-			<artifactId>cdi</artifactId>
+			<artifactId>microprofile-fault-tolerance</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.wildfly.swarm</groupId>
-			<artifactId>monitor</artifactId>
+			<artifactId>microprofile-config</artifactId>
 		</dependency>
-
-		<!-- DeltaSpike -->
 		<dependency>
-			<groupId>org.apache.deltaspike.core</groupId>
-			<artifactId>deltaspike-core-api</artifactId>
-			<scope>compile</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.apache.deltaspike.core</groupId>
-			<artifactId>deltaspike-core-impl</artifactId>
-			<scope>runtime</scope>
+			<groupId>org.wildfly.swarm</groupId>
+			<artifactId>microprofile-jwt</artifactId>
 		</dependency>
 
 		<!-- Feign -->
@@ -72,17 +57,6 @@
 		<dependency>
 			<groupId>io.github.openfeign</groupId>
 			<artifactId>feign-httpclient</artifactId>
-		</dependency>
-
-
-		<!-- hystrix-metrics-event-stream -->
-		<dependency>
-			<groupId>com.netflix.hystrix</groupId>
-			<artifactId>hystrix-core</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.netflix.hystrix</groupId>
-			<artifactId>hystrix-metrics-event-stream</artifactId>
 		</dependency>
 
 		<!-- OpenTracing -->
@@ -114,7 +88,7 @@
 	</dependencies>
 
 	<build>
-		<!-- Maven will append the version to the finalName (which is the name
+		<!-- Maven will append the version to the finalName (which is the name 
 			given to the generated war, and hence the context root) -->
 		<finalName>${project.artifactId}</finalName>
 		<plugins>
@@ -132,9 +106,9 @@
 				<groupId>org.wildfly.swarm</groupId>
 				<artifactId>wildfly-swarm-plugin</artifactId>
 				<version>${version.wildfly.swarm}</version>
-				<!-- <configuration>
-					<mainClass>com.redhat.training.msa.hola.Main</mainClass>
-				</configuration> -->
+				<configuration>
+					<useUberJar>true</useUberJar>
+				</configuration>
 				<executions>
 					<execution>
 						<goals>
@@ -167,7 +141,7 @@
 							<wildfly-swarm-health-check>
 								<port>8080</port>
 								<scheme>HTTP</scheme>
-								<path>api/health</path>
+								<path>health</path>
 							</wildfly-swarm-health-check>
 						</config>
 					</enricher>
