--- a/pom.xml
+++ b/pom.xml
@@ -1,19 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-	Copyright 2018, Red Hat, Inc. and/or its affiliates, and individual
-	contributors by the @authors tag. See the copyright.txt in the
-	distribution for a full listing of individual contributors.
-
-	Licensed under the Apache License, Version 2.0 (the "License");
-	you may not use this file except in compliance with the License.
-	You may obtain a copy of the License at
-	http://www.apache.org/licenses/LICENSE-2.0
-	Unless required by applicable law or agreed to in writing, software
-	distributed under the License is distributed on an "AS IS" BASIS,
-	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-	See the License for the specific language governing permissions and
-	limitations under the License.
--->
+<!-- Copyright 2018, Red Hat, Inc. and/or its affiliates, and individual 
+	contributors by the @authors tag. See the copyright.txt in the distribution 
+	for a full listing of individual contributors. Licensed under the Apache 
+	License, Version 2.0 (the "License"); you may not use this file except in 
+	compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
+	Unless required by applicable law or agreed to in writing, software distributed 
+	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
+	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
+	the specific language governing permissions and limitations under the License. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
@@ -28,27 +22,26 @@
 	<description>Red Hat Training microservices</description>
 
 	<licenses>
-			<license>
-					<name>Apache License, Version 2.0</name>
-					<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
-			</license>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+		</license>
 	</licenses>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<version.wildfly.swarm>2017.12.1</version.wildfly.swarm>
-		<deltaspike.version>1.6.1</deltaspike.version>
 		<version.compiler.plugin>3.1</version.compiler.plugin>
 		<version.surefire.plugin>2.16</version.surefire.plugin>
 		<version.war.plugin>2.5</version.war.plugin>
 		<version.fabric8.plugin>3.5.30</version.fabric8.plugin>
+		<version.resteasy>3.1.4.Final</version.resteasy>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<openfeign.version>9.4.0</openfeign.version>
 		<openfeign.opentracing.version>0.0.3</openfeign.opentracing.version>
 		<opentracing.version>0.22.0</opentracing.version>
 		<opentracing.web.servlet.filter.version>0.0.8</opentracing.web.servlet.filter.version>
-		<hystrix.version>1.5.1</hystrix.version>
 		<jaeger.version>0.19.0</jaeger.version>
 		<swagger.version>1.5.8</swagger.version>
 		<version.microprofile>1.2</version.microprofile>
@@ -61,7 +54,7 @@
 				<artifactId>microprofile</artifactId>
 				<version>${version.microprofile}</version>
 				<type>pom</type>
-				<scope>import</scope>
+				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.wildfly.swarm</groupId>
@@ -71,17 +64,20 @@
 				<scope>import</scope>
 			</dependency>
 			<dependency>
-				<groupId>org.apache.deltaspike.distribution</groupId>
-				<artifactId>distributions-bom</artifactId>
-				<version>${deltaspike.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-			<dependency>
 				<groupId>io.github.openfeign.opentracing</groupId>
 				<artifactId>feign-hystrix-opentracing</artifactId>
 				<version>${openfeign.opentracing.version}</version>
 			</dependency>
+<!-- 			<dependency>
+				<groupId>com.fasterxml.jackson.jaxrs</groupId>
+				<artifactId>jackson-jaxrs-json-provider</artifactId>
+				<version>${version.jackson}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-annotations</artifactId>
+				<version>${version.jackson}</version>
+			</dependency> -->
 			<dependency>
 				<groupId>io.github.openfeign</groupId>
 				<artifactId>feign-jackson</artifactId>
@@ -91,16 +87,6 @@
 				<groupId>io.github.openfeign</groupId>
 				<artifactId>feign-httpclient</artifactId>
 				<version>${openfeign.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.netflix.hystrix</groupId>
-				<artifactId>hystrix-core</artifactId>
-				<version>${hystrix.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.netflix.hystrix</groupId>
-				<artifactId>hystrix-metrics-event-stream</artifactId>
-				<version>${hystrix.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>io.opentracing</groupId>
@@ -130,6 +116,13 @@
 		</dependencies>
 	</dependencyManagement>
 
+	<dependencies>
+		<dependency>
+			<groupId>org.eclipse.microprofile</groupId>
+			<artifactId>microprofile</artifactId>
+			<type>pom</type>
+		</dependency>
+	</dependencies>
 	<modules>
 		<module>hola</module>
 	</modules>
