--- a/hola/pom.xml
+++ b/hola/pom.xml
@@ -44,7 +44,19 @@
 			<groupId>org.wildfly.swarm</groupId>
 			<artifactId>microprofile-jwt</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.wildfly.swarm</groupId>
+			<artifactId>swagger</artifactId>
+		</dependency>
+<!-- 		<dependency>
+			<groupId>org.wildfly.swarm</groupId>
+			<artifactId>swagger-webapp</artifactId>
+		</dependency> -->
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-client</artifactId>
+			<scope>provided</scope>
+		</dependency>
 		<!-- Feign -->
 		<dependency>
 			<groupId>io.github.openfeign.opentracing</groupId>
@@ -76,14 +88,9 @@
 		</dependency>
 
 		<!-- Swagger -->
-		<dependency>
-			<groupId>io.swagger</groupId>
-			<artifactId>swagger-jaxrs</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.webjars</groupId>
-			<artifactId>swagger-ui</artifactId>
-		</dependency>
+		<!-- <dependency> <groupId>io.swagger</groupId> <artifactId>swagger-jaxrs</artifactId> 
+			</dependency> <dependency> <groupId>org.webjars</groupId> <artifactId>swagger-ui</artifactId> 
+			</dependency> -->
 
 	</dependencies>
 
