WIP: got swagger working again

--- a/hola/src/main/resources/META-INF/swarm.swagger.conf
+++ b/hola/src/main/resources/META-INF/swarm.swagger.conf
@@ -1,4 +1,4 @@
-packages:com.redhat.training.msa.hola
+packages:com.redhat.training.msa.hola.rest
 root:api
 title:Hola microservices REST API
 description:Operations that can be invoked in the hola microservices
