--- a/aloha/pom.xml
+++ b/aloha/pom.xml
@@ -18,10 +18,10 @@
 		<version>1.0</version>
 	</parent>
 
-	<artifactId>hola</artifactId>
+	<artifactId>aloha</artifactId>
 	<packaging>war</packaging>
-	<name>Red Hat Training MSA: hola</name>
-	<description>Spanish Hello microservice</description>
+	<name>Red Hat Training MSA: aloha</name>
+	<description>Hawaiin Hello microservice</description>
 
 	<dependencies>
 		<dependency>
@@ -34,53 +34,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.wildfly.swarm</groupId>
-			<artifactId>microprofile-fault-tolerance</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.wildfly.swarm</groupId>
-			<artifactId>microprofile-config</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.wildfly.swarm</groupId>
-			<artifactId>microprofile-jwt</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.wildfly.swarm</groupId>
 			<artifactId>swagger</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.jboss.resteasy</groupId>
-			<artifactId>resteasy-client</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<!-- Feign -->
-		<dependency>
-			<groupId>io.github.openfeign.opentracing</groupId>
-			<artifactId>feign-hystrix-opentracing</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>io.github.openfeign</groupId>
-			<artifactId>feign-jackson</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>io.github.openfeign</groupId>
-			<artifactId>feign-httpclient</artifactId>
-		</dependency>
-
-		<!-- OpenTracing -->
-		<dependency>
-			<groupId>io.opentracing</groupId>
-			<artifactId>opentracing-noop</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>io.opentracing.contrib</groupId>
-			<artifactId>opentracing-web-servlet-filter</artifactId>
-		</dependency>
-
-		<!-- OpenTracing implementation - Jaeger -->
-		<dependency>
-			<groupId>com.uber.jaeger</groupId>
-			<artifactId>jaeger-core</artifactId>
 		</dependency>
 
 	</dependencies>
@@ -125,7 +79,7 @@
 							<all>
 								<property>
 									<name>app</name>
-									<value>hola</value>
+									<value>aloha</value>
 								</property>
 								<property>
 									<name>hystrix.enabled</name>
