--- a/aloha/pom.xml
+++ b/aloha/pom.xml
@@ -36,6 +36,10 @@
 			<groupId>org.wildfly.swarm</groupId>
 			<artifactId>swagger</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.wildfly.swarm</groupId>
+			<artifactId>swagger-webapp</artifactId>
+		</dependency>
 
 	</dependencies>
 
