--- a/aloha/pom.xml
+++ b/aloha/pom.xml
@@ -35,7 +35,7 @@
 		<dependency>
 			<groupId>org.wildfly.swarm</groupId>
 			<artifactId>microprofile-config</artifactId>
-		</dependency>		
+		</dependency>
 		<dependency>
 			<groupId>org.wildfly.swarm</groupId>
 			<artifactId>swagger</artifactId>
@@ -47,7 +47,11 @@
 		<dependency>
 			<groupId>org.wildfly.swarm</groupId>
 			<artifactId>logging</artifactId>
-		</dependency>		
+		</dependency>
+		<dependency>
+			<groupId>org.wildfly.swarm</groupId>
+			<artifactId>arquillian</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
