--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,8 @@
 		<swagger.version>1.5.8</swagger.version>
 		<version.microprofile>1.2</version.microprofile>
 		<arquillian.version>1.1.15.Final</arquillian.version>
+		<mockito.version>1.10.19</mockito.version>
+		<hamcrest.version>1.3</hamcrest.version>
 	</properties>
 
 	<dependencyManagement>
@@ -114,6 +116,16 @@
 				<artifactId>arquillian-bom</artifactId>
 				<version>${arquillian.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.hamcrest</groupId>
+				<artifactId>hamcrest-all</artifactId>
+				<version>${hamcrest.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-all</artifactId>
+				<version>${mockito.version}</version>
+			</dependency>						
 		</dependencies>
 	</dependencyManagement>
 
