--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,8 @@
 		<arquillian.version>1.1.15.Final</arquillian.version>
 		<mockito.version>1.10.19</mockito.version>
 		<hamcrest.version>1.3</hamcrest.version>
+		<version.keycloak>3.1.0.Final</version.keycloak>
+		<version.bouncycastle>1.52</version.bouncycastle>
 	</properties>
 
 	<dependencyManagement>
@@ -125,7 +127,7 @@
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-all</artifactId>
 				<version>${mockito.version}</version>
-			</dependency>						
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
