--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,13 @@
 				<artifactId>mockito-all</artifactId>
 				<version>${mockito.version}</version>
 			</dependency>
+			<!-- https://mvnrepository.com/artifact/org.eclipse.microprofile/microprofile -->
+			<dependency>
+				<groupId>org.eclipse.microprofile</groupId>
+				<artifactId>microprofile</artifactId>
+				<version>${version.microprofile}</version>
+				<type>pom</type>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
