Fixed authentication issue (HTTP/401 to HTTP/403). Need to identify why the role cannot be used.

--- a/hola/src/main/resources/project-defaults.yml
+++ b/hola/src/main/resources/project-defaults.yml
@@ -1,5 +1,11 @@
 # A project defaults for use with MP-JWT auth-method that include additional role mapping
 swarm:
+  bind:
+    address: localhost
+  # Example of passing in token verification information via project file
+  mpjwtauth:
+    token:
+      issuedBy: "https://server.example.com"
   security:
     security-domains:
       hello-domain:
