--- a/hola/pom.xml
+++ b/hola/pom.xml
@@ -134,7 +134,6 @@
 		<dependency>
 			<groupId>io.rest-assured</groupId>
 			<artifactId>rest-assured</artifactId>
-			<version>3.0.6</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -145,13 +144,11 @@
 		<dependency>
 			<groupId>com.github.tomakehurst</groupId>
 			<artifactId>wiremock-standalone</artifactId>
-			<version>2.14.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.netflix.hystrix</groupId>
 			<artifactId>hystrix-core</artifactId>
-			<version>1.5.9</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -176,6 +173,10 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.8.9</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.nimbusds</groupId>
+			<artifactId>nimbus-jose-jwt</artifactId>
 		</dependency>
 	</dependencies>
 
