Included changes to support Hystrix Dashboard (due to a bug in swarm https://issues.jboss.org/browse/SWARM-1796, it will not work though)

--- a/hola/pom.xml
+++ b/hola/pom.xml
@@ -164,6 +164,11 @@
 			<version>${version.hystrix}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.netflix.hystrix</groupId>
+			<artifactId>hystrix-serialization</artifactId>
+			<version>${version.hystrix}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.keycloak</groupId>
 			<artifactId>keycloak-core</artifactId>
 			<version>${version.keycloak}</version>
