--- a/aloha/src/main/fabric8/deployment.yml
+++ b/aloha/src/main/fabric8/deployment.yml
@@ -1,11 +1,11 @@
 ---
 apiVersion: "extensions/v1beta1"
-kind: "Deployment" 
-spec: 
+kind: "Deployment"
+spec:
   replicas: 1
-  template: 
-    spec: 
-      containers: 
+  template:
+    spec:
+      containers:
       - env:
          - name: JAVA_OPTIONS
-           value: "-Xmx256m"
+           value: "-Xmx256m -Dswarm.bind.address=0.0.0.0"
