--- a/hola/pom.xml
+++ b/hola/pom.xml
@@ -209,8 +209,16 @@
 			<plugin>
 				<groupId>io.fabric8</groupId>
 				<artifactId>fabric8-maven-plugin</artifactId>
-				<version>3.5.30</version>
+				<version>${version.fabric8.plugin}</version>
 				<configuration>
+					<generator>
+		                <includes>
+		                  <include>wildfly-swarm</include>
+		                </includes>
+		                <excludes>
+		                  <exclude>webapp</exclude>
+		                </excludes>
+              		</generator>
 					<resources>
 						<labels>
 							<all>
