--- a/aloha/pom.xml
+++ b/aloha/pom.xml
@@ -26,14 +26,6 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.wildfly.swarm</groupId>
-			<artifactId>microprofile-health</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.wildfly.swarm</groupId>
-			<artifactId>microprofile-metrics</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.wildfly.swarm</groupId>
 			<artifactId>microprofile-config</artifactId>
 		</dependency>
 		<dependency>
@@ -56,6 +48,11 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
 			<version>1.7.22</version>
+		</dependency>
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
@@ -102,36 +99,12 @@
 		                  <exclude>webapp</exclude>
 		                </excludes>
               		</generator>
-					<resources>
-						<labels>
-							<all>
-								<property>
-									<name>app</name>
-									<value>aloha</value>
-								</property>
-								<property>
-									<name>hystrix.enabled</name>
-									<value>true</value>
-								</property>
-							</all>
-						</labels>
-					</resources>
-					<enricher>
-						<config>
-							<wildfly-swarm-health-check>
-								<port>8080</port>
-								<scheme>HTTP</scheme>
-								<path>health</path>
-							</wildfly-swarm-health-check>
-						</config>
-					</enricher>
 				</configuration>
 				<executions>
 					<execution>
 						<id>fmp</id>
 						<goals>
 							<goal>resource</goal>
-							<goal>helm</goal>
 							<goal>build</goal>
 						</goals>
 					</execution>
