--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright 2018, Red Hat, Inc. and/or its affiliates, and individual 
-	contributors by the @authors tag. See the copyright.txt in the distribution 
-	for a full listing of individual contributors. Licensed under the Apache 
-	License, Version 2.0 (the "License"); you may not use this file except in 
-	compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
-	Unless required by applicable law or agreed to in writing, software distributed 
-	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
-	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
+<!-- Copyright 2018, Red Hat, Inc. and/or its affiliates, and individual
+	contributors by the @authors tag. See the copyright.txt in the distribution
+	for a full listing of individual contributors. Licensed under the Apache
+	License, Version 2.0 (the "License"); you may not use this file except in
+	compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
+	Unless required by applicable law or agreed to in writing, software distributed
+	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES
+	OR CONDITIONS OF ANY KIND, either express or implied. See the License for
 	the specific language governing permissions and limitations under the License. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
@@ -55,6 +55,8 @@
 		<version.wiremock>2.14.0</version.wiremock>
 		<version.hystrix>1.5.9</version.hystrix>
 		<version.nimbus>4.23</version.nimbus>
+		<spring-boot.bom.version>1.5.8.Final-redhat-1</spring-boot.bom.version>
+		<version.spring-boot>1.5.8.RELEASE</version.spring-boot>
 	</properties>
 
 	<dependencyManagement>
@@ -73,6 +75,13 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			<dependency>
+		        <groupId>me.snowdrop</groupId>
+		        <artifactId>spring-boot-bom</artifactId>
+		        <version>${spring-boot.bom.version}</version>
+		        <type>pom</type>
+		        <scope>import</scope>
+      </dependency>
 			<dependency>
 				<groupId>org.jboss.resteasy</groupId>
 				<artifactId>resteasy-client</artifactId>
@@ -155,7 +164,7 @@
             <version>${version.nimbus}</version>
         </dependency>
 		</dependencies>
-		
+
 	</dependencyManagement>
 
 	<dependencies>
@@ -165,9 +174,31 @@
 			<type>pom</type>
 		</dependency>
 	</dependencies>
-	<modules>
-		<module>hola</module>
-		<module>aloha</module>
-	</modules>
+
+	<repositories>
+    <repository>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <id>jboss-enterprise-maven-repository</id>
+      <url>https://maven.repository.redhat.com/ga/</url>
+    </repository>
+  </repositories>
+
+  <pluginRepositories>
+    <pluginRepository>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <id>jboss-enterprise-maven-repository</id>
+      <url>https://maven.repository.redhat.com/ga/</url>
+    </pluginRepository>
+  </pluginRepositories>
 
 </project>
